12-kuber-homeworks-2.3/deployment1.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ['sh', '-c', 'while true; do watch -n 5 date >> /my/output.txt; sleep 5; done']
        - name: multitool
          image: wbitt/network-multitool
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: volume
          resources:
            requests:
              cpu: "1m"
              memory: "20Mi"
            limits:
              cpu: "10m"
              memory: "20Mi"
      volumes:
      - name: volume
        configMap:
          name: indexname
