12-kuber-homeworks-2.3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicename
spec:
  selector:
    app: main
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 30000
      targetPort: 80
