12-kuber-homeworks-2.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressname
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicename
            port:
              number: 80
  tls:
    - hosts:
      - mysite.com
      secretName: secret-tlsname
